--- a/Lab7-Many-to-Many-Relationship.csproj
+++ b/Lab7-Many-to-Many-Relationship.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>Lab7_Many_to_Many_Relationship</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.2" />
+  </ItemGroup>
+
 </Project>
